<?xml version="1.0"?>
<package format="3">
  <name>fusion_description</name>
  <version>1.0.0</version>
  <description>
    This package contains the URDF for a Ford Fusion. We would like to thank
    Joe Zalewski (Quantum Signal AI) for creating the Ford Fusion mesh.
  </description>

  <author>Ankit Vora</author>
  <author>Siddharth Agarwal</author>
  <maintainer email="avora3@ford.com">Ankit Vora</maintainer>
  <maintainer email="sagarw20@ford.com">Siddharth Agarwal</maintainer>
  <maintainer email="shivaram.jagannathan@outlook.com">Shivaram Kumar</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
