<?xml version="1.0"?>
<package format="3">
  <name>map_loader</name>
  <version>1.0.0</version>
  <description>
    This package loads ground plane reflectivity map
    and 3D pointcloud map as PointCloud2 messages.
  </description>

  <author>Ankit Vora</author>
  <author>Siddharth Agarwal</author>
  <maintainer email="avora3@ford.com">Ankit Vora</maintainer>
  <maintainer email="sagarw20@ford.com">Siddharth Agarwal</maintainer>
  <maintainer email="shivaram.jagannathan@outlook.com">Shivaram Kumar</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>std_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
